roles/k8s/files/synapse/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: matrix
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:11
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: matrix-pv
          subPath: postgres
        - name: config-pv
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: matrix-pv
        persistentVolumeClaim:
          claimName: matrix
      - name: config-pv
        configMap:
          name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: matrix
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: postgres
