roles/k8s/files/synapse/googlechat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: googlechat
  namespace: matrix
  labels:
    app: googlechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: googlechat
  template:
    metadata:
      labels:
        app: googlechat
    spec:
      containers:
      - name: googlechat
        image: dock.mau.dev/mautrix/googlechat:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 29320
          protocol: TCP
        - name: metrics
          containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: matrix-pv
          mountPath: /data
          subPath: googlechat
      volumes:
      - name: matrix-pv
        persistentVolumeClaim:
          claimName: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: googlechat
  namespace: matrix
  labels:
    app: googlechat
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8000'
spec:
  type: ClusterIP
  selector:
    app: googlechat
  ports:
  - name: http
    port: 29320
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 8000
    protocol: TCP
    targetPort: metrics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: googlechat
  namespace: matrix
  labels:
    app: googlechat
  annotations:
    cert-manager.io/cluster-issuer: bonusplay
spec:
  tls:
  - secretName: tls
    hosts:
    - "bonusplay.pl"
    - "*.bonusplay.pl"
  rules:
  - host: matrix.bonusplay.pl
    http:
      paths:
      - path: /_googlechat
        pathType: ImplementationSpecific
        backend:
          service:
            name: googlechat
            port:
              name: http
