roles/k8s/files/synapse/telegram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram
  namespace: matrix
  labels:
    app: telegram
spec:
  replicas: 0
  selector:
    matchLabels:
      app: telegram
  template:
    metadata:
      labels:
        app: telegram
    spec:
      containers:
      - name: telegram
        image: dock.mau.dev/mautrix/telegram:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 29320
          protocol: TCP
        - name: metrics
          containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: matrix-pv
          mountPath: /data
          subPath: telegram
      volumes:
      - name: matrix-pv
        persistentVolumeClaim:
          claimName: matrix
---
apiVersion: v1
kind: Service
metadata:
  name: telegram
  namespace: matrix
  labels:
    app: telegram
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8000'
spec:
  type: ClusterIP
  selector:
    app: telegram
  ports:
  - name: http
    port: 29320
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 8000
    protocol: TCP
    targetPort: metrics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegram
  namespace: matrix
  labels:
    app: telegram
  annotations:
    cert-manager.io/cluster-issuer: bonusplay
spec:
  tls:
  - secretName: tls
    hosts:
    - "bonusplay.pl"
    - "*.bonusplay.pl"
  rules:
  - host: matrix.bonusplay.pl
    http:
      paths:
      - path: /_telegram
        pathType: ImplementationSpecific
        backend:
          service:
            name: telegram
            port:
              name: http
